--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+logging.level.com.openclassrooms=INFO
+logging.file=safetyNet-app.log
