added actuator and working delete method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+management.info.env.enabled = true
+management.endpoints.web.exposure.include=info,health,metrics,httpexchanges
 
+info.app.name=SafetyNet Alerts application
+info.app.description=This app sends emergency information to emergency responders
+info.app.version=1.0
