added working method and test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 management.info.env.enabled = true
-management.endpoints.web.exposure.include=info,health,metrics,httpexchanges
+management.endpoints.web.exposure.include=*
 info.app.name=SafetyNet Alerts application
 info.app.description=This app sends emergency information to emergency responders
 info.app.version=1.0
